# programmatic-policy-learning

./: .gitignore  .pylintrc  README.md  README_LPP.md  config.json  feature_library.json  feature_library_skip.json  features.json  features_rfts.json  features_rfts_demo_only_4.1.json  features_rfts_enc5_hint_only_4.1.json  features_rfts_enc5_hybrid_4.1.json  features_rfts_enc5_hybrid_4.1_collision_multi_4.1_trial2.json  features_stf.json  generator-p0.py  generator-p1.py  generator-p1_skip.py  generator_features-p0.json  generator_features-p1.json  llm_db.db  main.py  map_program.txt  new.json  new.py  p0.json  py_feature_payload_ensemble_merged.json  pyproject.toml  rfts_demo_only_4.1.json  run_ci_checks.sh  run_feature_curves.py  run_paper_curves.py  script.slurm
.github/workflows/: ci.yml
.pylint_cache/: data_1.stats  py_feature_generator_1.stats
TEMP/: checkmate_feats.json  main.py  payload.json  payload_rfts.json  test copy 2.json  test copy.json  test.json  test.py  test_stf.json
data/mazes/: generate_maze.py  maze1_15x15.npy  maze2_10x10.npy  maze2_15x15.npy  maze3_10x10.npy  maze3_15x15.npy  maze4_10x10.npy  maze4_15x15.npy  maze5_10x10.npy  maze5_15x15.npy  maze_10x10.npy
experiments/: breakout_llm_expert_adaptive_switch.py  breakout_llm_expert_aggressive_angle.py  breakout_llm_expert_center_hitter.py  breakout_llm_expert_copy.py  breakout_llm_expert_left_pressure.py  breakout_llm_expert_patient_builder.py  breakout_llm_expert_right_pressure.py  breakout_llm_expert_safe_tracker.py  breakout_llm_expert_tunnel_hunter_left.py  breakout_llm_expert_tunnel_hunter_right.py  generate_breakout_experts.py  generate_lunarlander_experts.py  generate_pendulum_experts.py  lander_llm_expert.py  make_presentation_gifs.py  merge_results.py  pendulum_llm_expert.py  pendulum_llm_expert_basic.py  pendulum_llm_expert_structured.py  plot_handwritten.py  plot_llm_prompt_comparison.py  run_breakout_experiments.py  run_breakout_llm_sweep.py  run_breakout_sweep.py  run_experiment.py  run_lunarlander_experiments.py  run_lunarlander_sweep.py  run_map_policy.py  run_pendulum_experiments.py
experiments/conf/: config.yaml
experiments/conf/approach/: fcn.yaml  lpp.yaml  mix.yaml  ppl.yaml  random_actions.yaml  residual.yaml  residual_from_expert.yaml  search.yaml
experiments/conf/env/: breakout.yaml  ggg.yaml  ggg_chase.yaml  ggg_checkmate.yaml  ggg_ctb.yaml  ggg_nim.yaml  ggg_rfts.yaml  ggg_stf.yaml  ggg_two_pile_nim.yaml  gym_maze.yaml  kinder_motion2d.yaml  kinder_pushpullhook2d.yaml  lunar_lander.yaml  lunar_lander_continuous.yaml  maze.yaml  outer_maze.yaml  pendulum.yaml  prbench_motion2d_p1.yaml
experiments/conf/expert/: ggg_expert.yaml  motion2d_expert.yaml  pendulum_base.yaml  pendulum_expert.yaml  zero_expert.yaml
experiments/conf/llm/: openai.yaml
experiments/jobs/: merge_results.sh  run_all_lpp_array.sh  submit_all.sh
experiments/maze_experiments/: README.md  compare_maze_approaches.py  compare_outer_margins.py  comparison_results.txt  llm_ppl_maze_results.txt  outer_margin_results.txt  plot_agentic_results.py  plot_comparison_results.py  run_agentic_integrated_maze.py  run_llm_ppl_maze.py
experiments/maze_experiments/conf/: compare_config.yaml  outer_margin_config.yaml
experiments/motion2d_experiments/: plot_birrt_motion2d.py  plot_llm_ppl_motion2d.py  run_agentic_integrated_motion2d.py  run_birrt_motion2d.py  run_llm_ppl_motion2d.py
experiments/paper_curves/: c2.yaml  example_config.yaml  feature_curves_example.yaml  prior_v1.yaml  test.yaml
experiments/scripts/: collect_kinder_manual_demos.py  debug_chase_policy.py  edit_motion2d_demo.py  inspect_motion2d_action_frame.py  merge_feature_jsons.py  print_map_program_functions.py  run_map_policy.py  run_motion2d_rollout.py  visualize_cap_policy.py
manual_demos/kinder__PushPullHook2D-v0/: seed_0000.pkl  seed_0001.pkl  seed_0002.pkl
results/: pendulum_iterative_best.json  pendulum_kp_grid_best.json
scripts/: merge_feature_jsons.py  merged_features.json  py_feature_payload.json  py_feature_payload_collision_1.json
src/programmatic_policy_learning/: utils.py
src/programmatic_policy_learning/approaches/: agentic_integrated_approach.py  (+37 more)
tests/: conftest.py  test_utils.py
tests/approaches/: run_param_policy_grid.py  test_breakout_expert.py  test_breakout_expert_ram.py  test_constant_approach.py  test_expert_approach.py  test_fcn_approach.py  test_grid_search_approach.py  test_llm_grid_search_approach.py  test_llm_refine_search_approach.py  test_llm_single_search_approach_pendulum.py  test_lpp_approach.py  test_lpp_collision_bucketing.py  test_lpp_feature_scoring_utils.py  test_lpp_hydra_config.py  test_lpp_program_generation_utils.py  test_lunarlander_approach.py  test_manual_demo_replay_expert_approach.py  test_maze_agentic_integrated_approach.py  test_maze_expert_approach.py  test_maze_integrated_approach.py  test_maze_llm_ppl_approach.py  test_mix_approach.py  test_motion2d_agentic_integrated_approach.py  test_motion2d_birrt_approach.py  test_motion2d_llm_ppl_approach.py  test_my_apprach_test.py  test_my_approach_test.py  test_pendulum_approach.py  test_pendulum_oracle.py  test_pendulum_stupid_algorithm.py  test_ppl_approach.py  test_random_actions.py  test_residual_approach.py  test_residual_discrete_approach.py  test_residual_tunnel.py  test_same_action.py  test_search_approach.py  test_structs.py
tests/continuous_lpp/: test_motion2d_end_to_end_smoke.py
tests/data/: test_action_quantization.py  test_collect.py  test_dataset.py  test_dataset_pipeline.py  test_dataset_step2_weights.py  test_demo_types.py  test_manual_kinder_demos.py
tests/dsl/: test_core.py  test_grid_v1_eval.py  test_oracle_learner.py  test_state_action_program.py
tests/env/: test_ggg.py  test_gym_to_gymnasium.py  test_maze.py  test_prbench.py  test_wrappers.py
tests/learning/: test_decison_tree_learner.py  test_particles_utils.py  test_plp_likelihood.py  test_prior_calculation.py
tests/lpp/: test_grammar.py  test_primitives.py  test_registry_simple.py  test_state_action_program.py
tests/policies/: test_lpp_policy.py
(+352 files in other folders)
