[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "programmatic_policy_learning"
version = "0.1.0"
description = " Common code for learning programmatic policies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "matplotlib",
   "numpy",
   "gymnasium[all]>=1.0.0",
   "prpl_utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-utils.git",
   "prpl_llm_utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-llm-utils.git",
   "moviepy",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
programmatic_policy_learning = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
]
ignore_missing_imports = true
