[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "programmatic_policy_learning"
version = "0.1.0"
description = " Common code for learning programmatic policies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "matplotlib",
   "numpy",
   "gymnasium[all]>=1.0.0",
    "prpl_utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@2d89490#subdirectory=prpl-utils",
   "prpl_llm_utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@fa325e461b26352643270fbb24c9b8e5133b7cbc#subdirectory=prpl-llm-utils",
   "tomsgeoms2d@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@bd61b1170856e33c73629245cfedc109d6a12e54#subdirectory=toms-geoms-2d",
   "relational_structs@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@bd61b1170856e33c73629245cfedc109d6a12e54#subdirectory=relational-structs",
   "generalization_grid_games@git+https://github.com/zahraabashir/generalization_grid_games.git@af6dfd73461be425087c03e4a5ea024de63f3419",
   "kinder-bilevel-planning@git+https://github.com/Princeton-Robot-Planning-and-Learning/kinder-baselines.git#subdirectory=kinder-bilevel-planning",
   "kinder-models@git+https://github.com/Princeton-Robot-Planning-and-Learning/kinder-baselines.git#subdirectory=kinder-models",
   "moviepy",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "omegaconf",
   "stable-baselines3[extra]>=2.4.0,<3.0",
   "scikit-learn",
    "cloudpickle>=2.0.0",
    "tqdm",
    "types-tqdm",
    "kindergarden",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
programmatic_policy_learning = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", 
"build/.*",
"src/programmatic_policy_learning/dsl/llm_primitives/outputs", 
"src/programmatic_policy_learning/dsl/llm_primitives/new_outputs", 
"src/programmatic_policy_learning/dsl/llm_primitives/baselines/llm_based/5.2_pro/.*",
"experiments/jobs/cc_jobs/.*",
"outputs/"
]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "generalization_grid_games.*",
    "scipy.*",
    "sklearn.*",
    "cloudpickle.*",
    "kinder",
    "kinder.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
